# langchain_project

./: .env  .env.default  .gitignore  LICENSE  README.md  requirements.txt
RAG/: .env  .env.default  docker-compose.yaml  llm.avif  readme.md  research.ipynb  test.py
RAG/data/: patients_20.csv  physician_20.csv  reviews_20.csv  visits_20.csv
RAG/db_vector/: chroma.sqlite3
RAG/llm/: chatbot.py  retriver_tools.py  tools.py
RAG/llm_api/: Dockerfile  pyproject.toml
RAG/llm_api/src/: entrypoint.sh  main.py
RAG/llm_api/src/agents/: rag_agent.py
RAG/llm_api/src/chains/: cyper_chain.py  review_chain.py
RAG/llm_api/src/models/: rag_query.py
RAG/llm_api/src/tools/: wait_times.py
RAG/llm_api/src/utils/: async_utils.py
RAG/llm_ui/: Dockerfile  pyproject.toml
RAG/llm_ui/src/: main.py
RAG/neo4j_etl/: Dockerfile  pyproject.toml
RAG/neo4j_etl/src/: create_embedding_review.py  entrypoint.sh  load_csv_to_db.py
ai-agent/: .env.default  app.py  readme.md
ai-agent/src/: agent.py  embedding.py  models.py  tools.py  utils.py
api/: api_v2.py  client.py  handler.py  lang.py  main.py  models.py  readme.md  research.ipynb
autonomus-hr-chatbot/: .env.default  README.md  app_backend.py  app_frontend.py  requirements.txt  settings.py  store_embeddings.py  utils.py
autonomus-hr-chatbot/data/: employee_data_new.csv  hr_policy.txt
autonomus-hr-chatbot/notebook/: notebook.ipynb  store_embeddings.ipynb
marketing/: .env  .env.example  app.py  readme.md
marketing/src/: llm.py  utils.py  vector.py
marketing/tempfolder/: sample_flipkart_25rows.csv
(+3 files in other folders)
